standard and custom converters for interfaces (#296)